<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:text="Fill both fields"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="48dp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/owner"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="Owner"
                android:textColor="@android:color/black"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/repo"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="Repo name"
                android:textColor="@android:color/black"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
</layout>